[project]
name = "keyball-qmk-config"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appdirs>=1.4.4",
    "argcomplete>=3.6.3",
    "colorama>=0.4.6",
    "dotty-dict>=1.3.1",
    "hid>=1.0.8",
    "hjson>=3.1.0",
    "jsonschema>=4",
    "milc>=1.4.2",
    "pillow>=12.1.0",
    "pygments>=2.19.2",
    "pyserial>=3.5",
    "pyusb>=1.3.1",
]
